# console-gis

./: Cargo.toml  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/data/: geojson.rs  markers.rs  mod.rs  topo.rs  world_map.rs
src/geo/: calc.rs  coordinate.rs  mod.rs  zoom.rs
src/render/: canvas.rs  compat.rs  globe.rs  mod.rs  typography.rs
src/tui/: app.rs  mod.rs
src/tui/views/: calc.rs  diagnostics.rs  globe.rs  layers.rs  map.rs  markers.rs  menu.rs  mod.rs  shape_editor.rs  splash.rs  zoom_explorer.rs
